--- a/management.html
+++ b/management.html
@@ -27,7 +27,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="dropdown button-dropdown">
+            <div class="dropdown button-dropdown logo-button">
                 <img class="nav-logo" src="/assets/images/logo_no_text.png">
             </div>
             <div class="navbar-translate">
@@ -163,8 +163,6 @@
     <script src="./vendor/now-ui/js/plugins/nouislider.min.js" type="text/javascript"></script>
     <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
     <script src="./vendor/now-ui/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
     <script src="./vendor/now-ui/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
 
