--- a/myanmar.html
+++ b/myanmar.html
@@ -27,7 +27,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="dropdown button-dropdown">
+            <div class="dropdown button-dropdown logo-button">
                 <img class="nav-logo" src="/assets/images/logo_no_text.png">
             </div>
             <div class="navbar-translate">
@@ -200,16 +200,18 @@
 
     <section class="wrapper section">
         <div class="container">
-            <h2 class="title text-center">Competitive Advantages (Work in Progress)</h2>
-            <ol>
-                <li class="core-values__text">Shareholders commitment to grow the business.</li>
-                <li class="core-values__text">Experienced Senior Management.</li>
-                <li class="core-values__text">Offices and Loan officers close to clients.</li>
-                <li class="core-values__text">Quick loan tracking time.</li>
-                <li class="core-values__text">Well-documented manuals and operational procedures.</li>
-                <li class="core-values__text">Latest banking CLOUD base MIS.</li>
-                <li class="core-values__text">Flexible products tailored to client specifics.</li>
-            </ol>
+            <h2 class="title text-center">Competitive Advantages</h2>
+            <div class="d-flex flex-row flex-wrap justify-content-center">
+                <p class="blockquote border--secondary comp-adv">Shareholders commitment to grow the business.</p>
+                <p class="blockquote border--secondary comp-adv">Experienced Senior Management.</p>
+                <p class="blockquote border--secondary comp-adv">Offices and Loan officers close to clients.</p>
+                <p class="blockquote border--secondary comp-adv">Quick loan tracking time.</p>
+            </div>
+            <div class="d-flex flex-row flex-wrap justify-content-center">
+                <p class="blockquote border--secondary comp-adv">Well-documented manuals and operational procedures.</p>
+                <p class="blockquote border--secondary comp-adv">Latest banking CLOUD base MIS.</p>
+                <p class="blockquote border--secondary comp-adv">Flexible products tailored to client specifics.</p>
+            </div>
             <div class="d-flex justify-content-center section">
                 <a href="https://www.hayman-capital.com.mm" target="_blank" class="btn btn-primary btn-round">Explore
                     more</a>
@@ -263,13 +265,12 @@
     <script src="./vendor/now-ui/js/plugins/nouislider.min.js" type="text/javascript"></script>
     <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
     <script src="./vendor/now-ui/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
     <script src="./vendor/now-ui/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
 
     <!-- Chartjs Library -->
     <script src="./vendor/chartjs/js/chart.bundle.min.js" type="text/javascript"></script>
+    <script src="./vendor/chartjs/js/chartjs-plugin-datalabels.min.js" type="text/javascript"></script>
 
     <!-- Main Javascript file imports -->
     <script src="./js/main.js" type="text/javascript"></script>
