--- a/index.html
+++ b/index.html
@@ -59,91 +59,117 @@
     <section class="wrapper landing">
         <div class="page-header page-header-small">
             <div class="page-header-image relative page-header--main" data-parallax="true" style="background-image: url('./assets/images/background/singapore3.jpg');">
-                <div class="overlay"></div>
+
             </div>
             <div class="content-center">
-                <div class="container">
-                    <h5 class="no-margin bold">HAYMAN CAPITAL</h5>
-                    <h1 class="title no-margin landing__title">EFFECTIVE INVESTMENTS</h1>
-                    <p>Prime investments in financial services across a rapidly growing Southeast Asia region.</p>
+                <div class="container landing-container d-flex flex-column justify-content-center ">
+                    <div class="landing-container__home pl-5">
+                            <h1 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h1>
+                            <p>Prime investments in financially inclusive projects across a rapidly growing Southeast Asia region</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="section">
-        <div class="container about-us d-flex flex-row justify-content-around flex-wrap">
-            <img class="d-flex logo--content" src="/assets/images/logo.png" />
-            <div class="about-us__content align-self-center">
-                <h1 class="title">About Us</h1>
-                <p>Hayman Capital Pte. Ltd is an investment and management company, registered and based in Singapore,
-                    with specific investments focus on and extensive country expertise in Myanmar, Vietnam and
-                    Indonesia.</p>
+        <div class="container d-flex flex-row flex-wrap flex-sm-nowrap">
+            <div class="d-flex flex-1 flex-column text-center p-5">
+                <h2 class="mb-5 bold">WHO WE ARE</h2>
+                <h5><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities. Hayman looks to make a positive impact to society wherever it invests. </h5>
+            </div>
+            <div class="d-flex flex-1 flex-column p-5">
+                <h3 class="mb-2 bold">VISION</h3>
+                <p class="mb-5">The most trustable regional partner in delivering services to the unbanked and underbanked population.</p>
+                <h3 class="mb-2 bold">MISSION</h3>
+                <p class="mb-5">To create value for our customers, employees, shareholders, and community.</p>
             </div>
         </div>
     </section>
 
-    <section class="section vision-mission">
-        <img class="backdrop opaque img-fluid about-us__backdrop backdrop--home" src="/assets/images/background/backdrop_logo.png">
-        <div class="container">
-            <div class="vm__content text-center">
-                <div class="vision">
-                    <h2 class="title">Vision</h2>
-                    <p>To become a leading investment capital company in South East Asia. </p>
+    <section class="section bg-cyan pt-5 pb-5">
+        <div class="container text-center text-white">
+            <h2 class="mb-5">CORE <b>VALUES</b></h2>
+            <h5 class="mb-3 bold">WE BELIEVE IN VALUE CREATION FROM:</h5>
+            <p>The highest level of ethical standards, professional integrity, corporate governance, and regulatory compliance</p>
+            <p>Financial inclusion and innovation, women empowerment and commitments towards social responsibility</p>
+            <p>Synergistic partnerships with our subsidiaries and stakeholders</p>
+        </div>
+    </section>
+
+    <section class="section bg-lightcyan pt-5 pb-5">
+        <div class="container p-5 d-flex flex-column text-darkblue">
+            <h2 class="bold mb-5 text-center">MANAGEMENT TEAM</h2>
+            <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
+                <div class="d-flex flex-column team-side text-center ">
+                    <img class="team-img img-placeholder">
+                    <h5 class="mb-1 mt-3">Tel: +65 93874275</h5>
+                    <p class="small">sultan.marenov@hayman-capital.com</p>
                 </div>
-                <div class="mission">
-                    <h2 class="title">Mission</h2>
-                    <p>To achieve sound financial health with sustainable value addition to all our stakeholders by
-                        delivering a world-class service through the blending of state-of-the-art technology and
-                        visionary management in partnership with competent and committed staff </p>
+                <div class="d-flex flex-column pl-sm-5">
+                    <h5 class="bold">SULTAN MARENOV</h5>
+                    <p class="text-blue text-underline pb-2 max-content mb-5"> CEO & Managing Director</p>
+                    <p>20 years of senior experience in Commercial Banking, focusing on Trade Finance, SME and Microfinance lending, Retail Banking and general operational management. Sultan began his career in 1999 at the BTA Bank - the biggest private financial institution in Central Asia and CIS countries. In 2005, he was appointed as a CEO at the BTA Bank Belarus. During his 10 years of management, the bank became the fastest growing in the region and awarded as the "Best Bank for entrepreneurs" several times. He has successfully implemented the EBRD Microfinance Program in the Bank. He holds Bachelor degree in Banking and Finance and Bachelor degree in Jurisprudence.</p>
+                </div>
+            </div>
+            <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
+                <div class="d-flex flex-column team-side text-center ">
+                    <img class="team-img img-placeholder">
+                    <h5 class="mb-1 mt-3">Tel: +95 9254 137628</h5>
+                    <p class="small">david.walker@hayman-capital.com</p>
+                </div>
+                <div class="d-flex flex-column pl-sm-5">
+                    <h5 class="bold">DAVID WALKER</h5>
+                    <p class="text-blue text-underline pb-2 max-content mb-5"> Director </p>
+                    <p>25 years of senior experience in Investment Banking and project development, focusing on Natural Resources, Real Estate and the Financial sector within fast-growing developing markets. David has been based in Russia for 6 years and Africa for 5 years. Previously David was a Managing Director at Citi Group, Deutsche Bank and Troika Dialogue in Moscow. David also has extensive experience in the Far East gained when he was a Director of Nomura International. MA in Jurisprudence from Oxford University.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="wrapper section core-values text-white bg-cyan">
-        <div class="container">
-            <h1 class="title text-center text-white">Core Values</h1>
-            <p class="text-center">WE BELIEVE IN VALUE CREATION FROM:</p>
-            <ul>
-                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate
-                    governance and regulatory compliance.</li>
-                <li class="core-values__text">Financial inclusion and innovation, women empowerment and commitments towards Social Responsibility.</li>
-                <li class="core-values__text">Synergistic partnerships with our subsidiaries and stakeholders.</li>
-            </ul>
+    <section class="section">
+        <div class="container d-flex flex-row flex-wrap flex-sm-nowrap">
+            <div class="d-flex flex-1 flex-column text-center p-5">
+                <h2 class="mb-5 bold pl-5">Prospective Investors & Stakeholders</h2>
+            </div>
+            <div class="d-flex flex-1 flex-column p-5">
+                <h2 class="bold">OUR ADDRESS</h2>
+                <h5 class='bold mb-0'>600 North Bridge Road,</h5>
+                <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
+                <h5 class='bold '>Singapore 188778</h5>
+                <div class="container footer__form mt-4">
+                    <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                        <div class="card-body contact-wrapper justify-content-center p-0">
+                            <div class="input-group no-border input-lg">
+                                <input type="email" class="form-control" placeholder="Your email...">
+                            </div>
+                            <div class="input-group no-border input-lg">
+                                <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                            </div>
+                            <div class="d-flex flex-row justify-content-end">
+                                <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Footer starts -->
-    <footer class="footer footer-default">
-        <div class="container footer__form">
-            <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
-                <div class="card-body contact-wrapper justify-content-center">
-                    <h3 class="text-center mb-3">Contact Us</h3>
-                    <div class="input-group no-border input-lg">
-                        <input type="email" class="form-control" placeholder="Your email...">
-                    </div>
-                    <div class="input-group no-border input-lg">
-                        <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
-                    </div>
-                    <div class="d-flex flex-row justify-content-center">
-                        <button type="submit" class="btn btn-primary btn-round">Submit</a>
-                    </div>
-                </div>
-            </form>
-        </div>
+    <footer class="footer footer-default bg-dark">
         <div class="container">
-            <nav>
-                <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
-                <p class="">600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
+            <nav class="text-white">
+                <p class='bold'>Hayman Capital Pte Ltd</p>
+                <p class='bold mb-2'>Registration Number: 2014261186N</p>
+                <p class="bold" id="copyright">
+                    &copy;
+                    <script>
+                        document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                    </script>
+                    Hayman Capital Pte. Ltd. All Rights Reserved.
+                </p>
             </nav>
-            <div class="copyright" id="copyright">
-                &copy;
-                <script>
-                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>
-                <a href="https://www.hayman-capital.com" target="_blank">Hayman Capital</a>.
-            </div>
         </div>
     </footer>
     <!-- Footer ends -->
